# sophosia

./: .eslintrc.cjs  .eslintrc.js  .gitignore  CLAUDE.md  README.md  README.zh_CN.md  index.html  package.json  plugins.json  quasar.config.js  quasar.extensions.json  quasar.testing.json  release.sh  todo.md  tsconfig.json  vitest.config.ts
.github/: release.yml
.github/workflows/: build.yml  portable-build.yml  publish.yml  publish.yml.bak  release.yml  test-build.yml  test-ci.yml
.quasar/: client-entry.js  quasar-user-options.js
citation_styles/: apa.js  chicago-author-date.js  ieee-with-url.js  modern-language-association.js
mydb/: 000010.ldb  LOG  LOG.old  MANIFEST-000007
mydb-mrview-c436da95c2ad9c110585bb7cf34f5d73/: 000005.ldb  000008.ldb  LOG  LOG.old  MANIFEST-000007
public/excalidraw-assets-dev/: vendor-e6df8519da951026ff69.js
src/: App.vue
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/help/: help_en_US.md  help_zh_CN.md
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/assets/: help_en_US.md  help_zh_CN.md
src/backend/: utils.ts  utils.vitest.test.ts  veaury.esm.js
src/backend/appState/: index.ts
src/backend/authSupabase/: index.ts  supabaseClient.ts
src/backend/category/: category.vitest.test.ts  fileOps.ts  index.ts  (+1 more)
src/boot/: citationStyles.ts  env.ts  excalidraw.ts  i18n.ts  notify.ts  scan.ts
src/components/: ErrorDialog.vue  MetaInfoTab.vue  WelcomeCarousel.cy.ts  WelcomeCarousel.vue
src/composables/: useNodeActions.ts  useProjectActions.ts
src/css/: app.scss  quasar.variables.scss
src/i18n/: en_US.json  fr_CA.json  zh_CN.json
src/layouts/: AppLayout.vue  GLayout copy.vue  GLayout.vue  LeftRibbon.vue  MainLayout copy.vue  MainLayout.vue  MainWindow.vue  UnifiedSidebar.vue
src/pages/: ExcalidrawPage copy.vue  ExcalidrawPage.vue  GLComponent.vue  GraphPage.vue  HelpPage.vue  LibraryPage.vue  NotePage.vue  PluginPage.vue  PluginSettingsPage.vue  ReaderPage.vue  SettingsPage.vue  TestPage.vue  WorkspacePage.cy.ts  WorkspacePage.vue
src/router/: index.ts  routes.ts
src/stores/: accountStore.ts  appState.ts  chatStore.ts  layoutStore copy.ts  layoutStore.ts  pageStore.ts  projectStore.ts  projectStore.ts.bak  settingStore.ts  stateStore.ts  windowStore.ts
storage/.obsidian/: community-plugins.json  workspace.json
storage/.research-helper/: library.excalidrawlib
storage/SP2LFNJKVJ/: Untitled.excalidraw  cccc.excalidraw
test/vitest/: mock-sqlite.ts  setup-file.ts
(+192 files in other folders)
